Refactor to replace `TradingSignalComputationService` with modular strategy components
- Removed `TradingSignalComputationService` and migrated logic into modular strategy classes for better maintainability.
- Introduced `StrategyRegistry`, `TradingStrategyBootstrapValidator`, and `TradingStrategyParamResolver` for cleaner version-specific strategy management.
- Added `StrategyFacade` as a static bridge for external callers and JPype integrations.
- Consolidated trading signal evaluation in `StrategyEvaluation` with concise, version-aware logic.
- Enhanced test coverage for strategy validation, registry, and version-specific behaviors.
- Updated `TradingSignalMetricsServiceTest` with version-aware configuration.