@@ -1,10 +1,12 @@
 package org.nowstart.evergreen.service;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
+import java.util.Objects;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.nowstart.evergreen.data.dto.TradingDayCandleDto;
@@ -12,6 +14,9 @@ import org.nowstart.evergreen.data.dto.UpbitDayCandleResponse;
 import org.nowstart.evergreen.data.dto.UpbitTickerResponse;
 import org.nowstart.evergreen.data.property.TradingProperties;
 import org.nowstart.evergreen.repository.UpbitFeignClient;
+import org.nowstart.evergreen.strategy.StrategyRegistry;
+import org.nowstart.evergreen.strategy.TradingStrategyParamResolver;
+import org.nowstart.evergreen.strategy.core.StrategyParams;
 import org.springframework.cloud.context.config.annotation.RefreshScope;
 import org.springframework.stereotype.Service;
 
@@ -23,14 +28,16 @@ public class TradingSignalMarketDataService {
 
     private final UpbitFeignClient upbitFeignClient;
     private final TradingProperties tradingProperties;
+    private final TradingStrategyParamResolver strategyParamResolver;
+    private final StrategyRegistry strategyRegistry;
 
     public List<TradingDayCandleDto> fetchDailyCandles(String market) {
+        String activeVersion = strategyParamResolver.resolveActiveStrategyVersion();
+        StrategyParams strategyParams = strategyParamResolver.resolve(activeVersion);
+        int strategyWarmup = strategyRegistry.requiredWarmupCandles(activeVersion, strategyParams);
         int required = Math.max(
                 tradingProperties.candleCount(),
-                Math.max(
-                        Math.max(tradingProperties.regimeEmaLen(), tradingProperties.atrPeriod()),
-                        tradingProperties.volRegimeLookback()
-                ) + 2
+                strategyWarmup + 2
         );
 
         List<UpbitDayCandleResponse> rows = upbitFeignClient.getDayCandles(market, required);
@@ -41,7 +48,7 @@ public class TradingSignalMarketDataService {
 
         List<TradingDayCandleDto> candles = rows.stream()
                 .map(this::toDayCandle)
-                .filter(candle -> candle != null)
+                .filter(Objects::nonNull)
                 .sorted(Comparator.comparing(TradingDayCandleDto::timestamp))
                 .toList();
         if (candles.isEmpty()) {
@@ -62,11 +69,11 @@ public class TradingSignalMarketDataService {
         double fallback = (Double.isFinite(fallbackClose) && fallbackClose > 0.0) ? fallbackClose : Double.NaN;
         try {
             List<UpbitTickerResponse> tickers = upbitFeignClient.getTickers(market);
-            if (tickers == null || tickers.isEmpty() || tickers.get(0) == null || tickers.get(0).trade_price() == null) {
+            if (tickers == null || tickers.isEmpty() || tickers.getFirst() == null || tickers.getFirst().trade_price() == null) {
                 return fallback;
             }
 
-            double tradePrice = tickers.get(0).trade_price().doubleValue();
+            double tradePrice = tickers.getFirst().trade_price().doubleValue();
             if (!Double.isFinite(tradePrice) || tradePrice <= 0.0) {
                 return fallback;
             }
@@ -88,6 +95,7 @@ public class TradingSignalMarketDataService {
     private TradingDayCandleDto toDayCandle(UpbitDayCandleResponse row) {
         if (row == null
                 || row.candle_date_time_utc() == null
+                || row.opening_price() == null
                 || row.high_price() == null
                 || row.low_price() == null
                 || row.trade_price() == null) {
@@ -97,9 +105,11 @@ public class TradingSignalMarketDataService {
         try {
             return new TradingDayCandleDto(
                     LocalDateTime.parse(row.candle_date_time_utc()).toInstant(ZoneOffset.UTC),
+                    row.opening_price(),
                     row.high_price(),
                     row.low_price(),
-                    row.trade_price()
+                    row.trade_price(),
+                    row.candle_acc_trade_volume() == null ? BigDecimal.ZERO : row.candle_acc_trade_volume()
             );
         } catch (Exception e) {
             log.warn("Failed to parse day candle row. row={}", row, e);
